Redactados la mayoría de diálogos importantes, creado el arte para las pistas.

--- a/css/cinematic.css
+++ b/css/cinematic.css
@@ -68,3 +68,42 @@
     cursor: pointer;
    
 }
+
+/*
+
+ .----------------.  .----------------.  .----------------. 
+| .--------------. || .--------------. || .--------------. |
+| |              | || |              | || |      __      | |
+| |              | || |              | || |     /  \     | |
+| |              | || |              | || |    / /\ \    | |
+| |              | || |              | || |   / ____ \   | |
+| |              | || |              | || | _/ /    \ \_ | |
+| |              | || |              | || ||____|  |____|| |
+| |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------' 
+ .----------------.  .----------------.  .----------------. 
+| .--------------. || .--------------. || .--------------. |
+| |              | || |              | || |              | |
+| |              | || |              | || |              | |
+| |              | || |              | || |              | |
+| |              | || |              | || |              | |
+| |              | || |              | || |              | |
+| |              | || |              | || |              | |
+| |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------' 
+ .----------------.  .----------------.  .----------------. 
+| .--------------. || .--------------. || .--------------. |
+| |  ____  ____  | || |              | || |              | |
+| | |_   ||   _| | || |              | || |              | |
+| |   | |__| |   | || |              | || |              | |
+| |   |  __  |   | || |              | || |              | |
+| |  _| |  | |_  | || |              | || |              | |
+| | |____||____| | || |              | || |              | |
+| |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------' 
+
+
+*/
