--- a/css/computer.css
+++ b/css/computer.css
@@ -88,6 +88,16 @@
     background-color: rgb(177, 253, 0);
     color: green;
 }
+#clue-computer{
+    width: 300px;
+    height: 300px;
+    background-image: url("../resources/img/pistaPC.png");
+    position: relative;
+    left: 33%;
+    top: 10%;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
 .password-screen-computer {
     display: flex;
