--- a/css/darkRoom.css
+++ b/css/darkRoom.css
@@ -23,7 +23,7 @@
 
 #dark-room-exit-button{
   position: fixed;
-  /*border: 2px solid red;*/
+  border: 2px solid red;
   width: 50px;
   height: 50px;
   border-radius: 50px;
