--- a/css/doorPuzzle.css
+++ b/css/doorPuzzle.css
@@ -12,6 +12,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    /*Configuracion de no seleccionar*/
+    -webkit-touch-callout: none; /* Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera, and Firefox */
   }
 
 #door-puzzle-container{
