--- a/css/hud.css
+++ b/css/hud.css
@@ -1,101 +1,108 @@
 .backgroundImg {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
 }
 .hud-button {
-   margin-top: 10px;
-    margin-right: 30px;
-    margin-left: 10px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  margin-top: 10px;
+  margin-right: 30px;
+  margin-left: 10px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .hud-button:hover {
-    transform: scale(1.05);
-    cursor: pointer;
+  transform: scale(1.05);
+  cursor: pointer;
 }
 
 #optionsButton {
-background-image: url(../resources/Icons/24.png);
-width: 32px;
-height: 31px;
+  background-image: url(../resources/Icons/24.png);
+  width: 32px;
+  height: 31px;
 }
 
 #hintButton {
-    width: 20px; /* Ajusta según el tamaño deseado */
-    height: 31px; /* Ajusta según el tamaño deseado */
-    background-image: url(../resources/Icons/06.png);
-    }
+  width: 20px;
+  height: 31px;
+  background-image: url(../resources/Icons/06.png);
+}
 
 #inventoryButton {
-    width: 32px; /* Ajusta según el tamaño deseado */
-    height: 31px; /* Ajusta según el tamaño deseado */
-    background-image: url(../resources/Icons/13.png);
-    }
+  width: 32px;
+  height: 31px;
+  background-image: url(../resources/Icons/13.png);
+}
 #hud {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  display: flex;
 }
 
 #dialogBox {
-    position: fixed;
-    bottom: 3%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80%; /* O el ancho que prefieras */
-    height: 20%;
-    z-index: 10; /* Por encima del HUD */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: url("../resources/dialogBox/CardX6.png");
-    background-size: 100% 100%;
-    background-position: center;
-    background-repeat: no-repeat;
+  position: fixed;
+  bottom: 3%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  height: 20%;
+  z-index: 12; /* Por encima del HUD */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("../resources/dialogBox/CardX6.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 #speakerSprite {
-    position: absolute;
-    top: -290px;
-    right: 40%; /* Ajusta para colocar encima del diálogo */
-    width: 300px; /* Ajusta según el tamaño deseado */
-    height: 300px; /* Ajusta según el tamaño deseado */
-    z-index: 1; /* Detrás del texto del diálogo */
-    background-size: contain; /* o contain, dependiendo de lo que necesites */
-    background-repeat: no-repeat;
-    background-position: center;
+  position: fixed;
+  top: -290px;
+  right: 40%;
+  width: 300px;
+  height: 300px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #speakerContainer {
-    position: fixed;
-    transform: translateY(70%);
-    width: 80%;
-    
+  position: fixed;
+  width: 80%;
+  padding-top: 2rem;
 }
 
 #speakerName {
-    padding: 0.313em;
-    
-    text-align: center;
+  text-align: center;
 }
 
 #dialogTextContainer {
-    position: fixed;
-    transform: translateY(80%);
-    width: 94%;
-    z-index: 10;
-    
+  position: fixed;
+  width: 90%;
+  z-index: 12;
+  padding-top: 3.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 #dialogText {
-    padding: 0.625em;
-    text-align: center;
-    
+  text-align: center;
 }
 
+#dialog-background-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .7);
+    pointer-events: all;
+    z-index: 11;
+    cursor: auto;
+  }
