--- a/css/styleCorridor.css
+++ b/css/styleCorridor.css
@@ -29,12 +29,12 @@
     gap: 1rem;
 }
 #corridor-tutorial{
-    background-image: url('../resources/corridor/corridor-controlls.jpg');
+    background-image: url('../resources/corridor/corridor-controlls.png');
     background-size: 100% 100%; 
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 25%;
+    height: 30%;
     border-radius: 40px;
 }
 #jm-2 {
