--- a/css/room3.css
+++ b/css/room3.css
@@ -64,3 +64,26 @@
     border-radius: 50px;
     cursor: pointer;
 }
+
+#modal-window-pda{
+  background-image: url('../resources/dialogBox/CardX5.png');
+  background-size: 100% 100%; 
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 50px;
+  width: 50vw;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#pda-clue-image{
+    background-image: url(../resources/img/PDA.png);
+    background-size: 100% 100%; 
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
