--- a/css/jeepPuzzle.css
+++ b/css/jeepPuzzle.css
@@ -110,3 +110,13 @@
   transform: scale(0.9); /* Aumenta el tamaño al 110% */
   transition: transform 0.2s ease-in-out; /* Agrega una transición suave */
 }
+
+.simon-solved-clue{
+  background-image: url(../resources/img/pistaSimon.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  
+  width: 100%;
+  height: 100%;
+}
