--- a/css/slidePuzzle.css
+++ b/css/slidePuzzle.css
@@ -99,3 +99,12 @@
   .bc_9 {
     background-image: url(../resources/slide/slide_BHueco-Rojo.png);/*rojo*/
   }
+
+  .slide-solved-clue{
+    background-image: url(../resources/img/pistaPuzzleDeslizante.png);
+    background-size: 100% 100%; 
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+  }
