--- a/css/styleCorridor.css
+++ b/css/styleCorridor.css
@@ -1,5 +1,5 @@
 #corridor-background{
-    background-image: url(../resources/img/dark-room-background-alt.jpg);
+    /*background-image: url(../resources/img/dark-room-background-alt.jpg);*/
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
