--- a/css/hub.css
+++ b/css/hub.css
@@ -51,9 +51,10 @@
     color: var(--color-one);
     justify-content: center;
     align-items: center;
-    text-align: justify;
+    text-align: center;
     padding-right: 2.5rem;
     padding-left: 2.5rem;
+    overflow: auto; /* Mostrar scrollbar solo en dirección vertical */
 }
 
 #hub-instructions-box h1{
@@ -79,6 +80,7 @@
     gap: 2rem;
     padding-left: 3rem;
     padding-right: 3rem;
+    padding-bottom: 2rem;
 }
 
 .hub-promotor-card{
@@ -102,13 +104,14 @@
 
 .hub-promotor-card-photo{
     border-radius: 50%;
-    height: 17rem;
-    width: 100%;
+    height: 14rem;
+    width: 80%;
     background-color: aliceblue;
     margin-bottom: 2rem;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
+    align-self: center;
 }
 
 #hub-third-row{
