--- a/css/credits.css
+++ b/css/credits.css
@@ -12,6 +12,7 @@ body, html {
     color: rgb(177, 253, 0);
     background-color: #000000;
     overflow: hidden;
+    font-size: 30px;
 }
 
 .credits-container {
