--- a/css/credits.css
+++ b/css/credits.css
@@ -8,7 +8,7 @@
 body, html {
     height: 100%;
     margin: 0;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     color: rgb(177, 253, 0);
     background-color: #000000;
     overflow: hidden;
